RESOLVED FIXED267519
Resize should not be applied to generated content
https://bugs.webkit.org/show_bug.cgi?id=267519
Summary Resize should not be applied to generated content
Ahmad Saleem
Reported 2024-01-14 17:54:36 PST
Hi Team, While looking into browser specific failures on WPT.FYI, I noticed that we fail following WPT Test: WPT Test Case: https://wpt.fyi/results/css/css-ui/resize-generated-content.html?label=experimental&label=master&aligned= WPT Test Case (Live Link): http://wpt.live/css/css-ui/resize-generated-content.html Blink Commit: https://chromium-review.googlesource.com/c/chromium/src/+/2584970 Something like: `style().styleType() != PseudoId::None` needs to be added in our code base: https://searchfox.org/wubkat/rev/581e116dc6ce254811dbe2da9d1c1168762fc30c/Source/WebCore/style/StyleBuilderConverter.h#797 or some place else - I don't know where exactly, we need to add this. Just wanted to raise so we can at least track it. Thanks!
Attachments
Tim Nguyen (:ntim)
Comment 2 2024-01-14 19:07:02 PST
This isn't super hard to fix. All the `resize() != Resize::None` need to be consolidated into a single method, and then that method should be augmented to check the pseudoId.
Radar WebKit Bug Importer
Comment 4 2024-01-21 17:55:14 PST
Ahmad Saleem
Comment 5 2024-10-23 12:11:59 PDT
EWS
Comment 6 2024-10-24 04:45:07 PDT
Committed 285644@main (35e55ec1b446): <https://commits.webkit.org/285644@main> Reviewed commits have been landed. Closing PR #35642 and removing active labels.
Ahmad Saleem
Comment 7 2024-10-24 06:27:51 PDT
*** Bug 135243 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.