Don't apply the resize property to generated content https://bugs.webkit.org/show_bug.cgi?id=267519 rdar://121348638

Reviewed by Antoine Quint.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Inspired by: https://chromium-review.googlesource.com/c/chromium/src/+/2584970

The spec says the behavior is currently undefined [1] and implementations
should not apply the property to generated content. Although it is still part of
the computed styles.

[1] https://drafts.csswg.org/css-ui/#resize

* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::overflowControlsRects const):
* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
(WebCore::RenderLayerScrollableArea::overflowControlsRects const):
* LayoutTests/TestExpectations:

Canonical link: https://commits.webkit.org/285644@main